--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
   		<div role="countdown_page" class="page">
   			<img src="../images/tagbondlogo.png" class="logo">
     		<div class="timer t-heading" role="timer_value"></div>
-  			<textarea spellcheck="false" class="heading-3 t-sub" style="resize: none; overflow: hidden; height: 32px;">Time Remaining</textarea>
+    		<div class="heading-3 t-sub">Time Remaining</div>
+  			<!-- <textarea spellcheck="false" class="heading-3 t-sub" style="resize: none; overflow: hidden; height: 100px;">Time Remaining</textarea> -->
 		    <!-- <div class="date t-sub" role="timer_date"></div>
 		    <textarea spellcheck="false" class="date t-sub heading-4" style="resize: none; overflow: hidden; height: 27px;"></textarea> -->
 		</div>
