added register button

--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,11 @@
   		<div role="countdown_page" class="page">
   			<img src="../images/tagbondlogo.png" class="logo">
     		<div class="timer t-heading" role="timer_value"></div>
-    		<div class="heading-3 t-sub">Time Remaining</div>
-  			<!-- <textarea spellcheck="false" class="heading-3 t-sub" style="resize: none; overflow: hidden; height: 100px;">Time Remaining</textarea> -->
-		    <!-- <div class="date t-sub" role="timer_date"></div>
-		    <textarea spellcheck="false" class="date t-sub heading-4" style="resize: none; overflow: hidden; height: 27px;"></textarea> -->
+    		<div class="heading-3 t-sub">Time Remaining</div><br>
+    		<div class="t-sub">
+    			<a href="https://tagbond.com/hackathon" class="register-button" target="_blank">Register now</a>
+    		</div>
+		    <!-- <div class="date t-sub" role="timer_date"></div> -->
 		</div>
 
   		<script type="text" id="samples">
