revealed the register button

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
   			<img src="../images/tagbondlogo.png" class="logo">
     		<div class="timer t-heading" role="timer_value"></div>
     		<div class="heading-3 t-sub">before the hacking begins!</div><br>
-    		<!-- <div class="t-sub">
+    		<div class="t-sub">
     			<a href="https://tagbond.com/hackathon" class="register-button" target="_blank">Register now</a>
-    		</div> -->
+    		</div>
 		    <!-- <div class="date t-sub" role="timer_date"></div> -->
 		</div>
 
