updated script.js and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
   		<div role="countdown_page" class="page">
   			<img src="../images/tagbondlogo.png" class="logo">
     		<div class="timer t-heading" role="timer_value"></div>
-    		<div class="heading-3 t-sub">before the hacking begins!</div><br>
+			<textarea class="heading-3 t-sub" style="line-height: 30px;">before the hacking begins!</textarea>
+    		<br>
     		<!-- <div class="t-sub">
     			<a href="https://tagbond.com/hackathon" class="register-button" target="_blank">Register now</a>
     		</div> -->
