--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Time-ah</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/an.css">
 
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 	<script>WebFontConfig={google:{families:['Electrolize:400','Lato:300,700','Montserrat:400']}},function(a,b){var c=a.createElement(b);c.src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js",c.async=1;var d=a.getElementsByTagName(b)[0];d.parentNode.insertBefore(c,d)}(document,"script")</script>
