--- a/public/slide.html
+++ b/public/slide.html
@@ -29,15 +29,11 @@
 	</div>
 	<script>
 		$(document).ready(function(){
-			jQuery('#maximage').maximage({
-				cycleOptions: {
-					pause: 2,
-				}
-			});
+			jQuery('#maximage').maximage();
 
 			setTimeout(function(){
 				window.location.href='/';
-			}, 28000);
+			}, 280000);
 		});
 	</script>
 </body>
