--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
 	<title>Time-ah</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/an.css">
+	<link rel="stylesheet" href="css/jquery.maximage.css">
 
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="js/jquery.easing.compatibility.js"></script>
+	<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
+	<script type="text/javascript" src="js/jquery.maximage.js"></script>
 	<script>WebFontConfig={google:{families:['Electrolize:400','Lato:300,700','Montserrat:400']}},function(a,b){var c=a.createElement(b);c.src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js",c.async=1;var d=a.getElementsByTagName(b)[0];d.parentNode.insertBefore(c,d)}(document,"script")</script>
 	<script type="text/javascript" src="js/modernizr.js"></script>
 	<script type="text/javascript" src="js/moment.js"></script>
@@ -36,6 +40,23 @@
 		      <li><a href='?December 1 10:00am'>?December 10, 10:00am</a></li>
     		</ul>
 			</script>
+	</div>
+
+	<div id="maximage">
+		<img src="../images/slides/Slide01.png" alt="" width="100%" />
+		<img src="../images/slides/Slide02.png" alt="" width="100%" />
+		<img src="../images/slides/Slide03.png" alt="" width="100%" />
+		<img src="../images/slides/Slide04.png" alt="" width="100%" />
+		<img src="../images/slides/Slide05.png" alt="" width="100%" />
+		<img src="../images/slides/Slide06.png" alt="" width="100%" />
+		<img src="../images/slides/Slide08.png" alt="" width="100%" />
+		<!-- <img src="../images/slides/Slide09.png" alt="" width="100%" /> -->
+		<img src="../images/slides/Slide10.png" alt="" width="100%" />
+		<img src="../images/slides/Slide11.png" alt="" width="100%" />
+		<img src="../images/slides/Slide12.png" alt="" width="100%" />
+		<img src="../images/slides/Slide13.png" alt="" width="100%" />
+		<img src="../images/slides/Slide14.png" alt="" width="100%" />
+		<img src="../images/slides/Slide15.png" alt="" width="100%" />
 	</div>
 </body>
 </html>
