update on index

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   		<div role="countdown_page" class="page">
   			<img src="../images/tagbondlogo.png" class="logo">
     		<div class="timer t-heading" role="timer_value"></div>
-			<textarea class="heading-3 t-sub" style="line-height: 30px;">before the hacking begins!</textarea>
+			<textarea class="heading-3 t-sub" style="line-height: 30px;">before the hacking ends!</textarea>
     		<br>
     		
     		<!-- <div class="t-sub">
