--- a/public/index.html
+++ b/public/index.html
@@ -18,18 +18,10 @@
 </head>
 <body>
 	<div id="all">
-		<div role="message" class="message hide"></div>
-        
   		<div role="countdown_page" class="page">
   			<img src="../images/tagbondlogo.png" class="logo">
     		<div class="timer t-heading" role="timer_value"></div>
-			<textarea class="heading-3 t-sub" style="line-height: 30px;">before the hacking ends!</textarea>
-    		<br>
-    		
-    		<!-- <div class="t-sub">
-    			<a href="https://tagbond.com/hackathon" class="register-button" target="_blank">Register now</a>
-    		</div> -->
-		    <!-- <div class="date t-sub" role="timer_date"></div> -->
+			<textarea class="heading-3 t-sub" style="line-height: 30px;">before Christmas</textarea>
 		</div>
 
   		<script type="text" id="samples">
@@ -39,24 +31,7 @@
 		      <li><a href='?in 20 minutes'>?in 20 minutes</a></li>
 		      <li><a href='?December 1 10:00am'>?December 10, 10:00am</a></li>
     		</ul>
-			</script>
-	</div>
-
-	<div id="maximage">
-		<img src="../images/slides/Slide01.png" alt="" width="100%" />
-		<img src="../images/slides/Slide02.png" alt="" width="100%" />
-		<img src="../images/slides/Slide03.png" alt="" width="100%" />
-		<img src="../images/slides/Slide04.png" alt="" width="100%" />
-		<img src="../images/slides/Slide05.png" alt="" width="100%" />
-		<img src="../images/slides/Slide06.png" alt="" width="100%" />
-		<img src="../images/slides/Slide08.png" alt="" width="100%" />
-		<!-- <img src="../images/slides/Slide09.png" alt="" width="100%" /> -->
-		<img src="../images/slides/Slide10.png" alt="" width="100%" />
-		<img src="../images/slides/Slide11.png" alt="" width="100%" />
-		<img src="../images/slides/Slide12.png" alt="" width="100%" />
-		<img src="../images/slides/Slide13.png" alt="" width="100%" />
-		<img src="../images/slides/Slide14.png" alt="" width="100%" />
-		<img src="../images/slides/Slide15.png" alt="" width="100%" />
+		</script>
 	</div>
 </body>
 </html>
