--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 <body>
 	<div id="all">
-  		<div role="countdown_page" class="page">
+        <div role="countdown_page" class="page">
+            <textarea class="heading-1 t-stylish logo">2014 Countdown</textarea>
   			<!-- <img src="../images/tagbondlogo.png" class="logo"> -->
     		<div class="timer t-heading" role="timer_value"></div>
 			<textarea class="heading-3 t-sub" style="line-height: 30px;">before 2014</textarea>
