set new date for LC grad

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
 	<div id="all">
         <div role="countdown_page" class="page">
-            <textarea class="heading-1 t-stylish logo">2014 Countdown</textarea>
+            <textarea class="heading-1 t-stylish logo">Lorma Graduation Countdown</textarea>
   			<!-- <img src="../images/tagbondlogo.png" class="logo"> -->
     		<div class="timer t-heading" role="timer_value"></div>
-			<textarea class="heading-3 t-sub" style="line-height: 30px;">before 2014</textarea>
+			<textarea class="heading-3 t-sub" style="line-height: 30px;">before the celebration!!!</textarea>
 		</div>
 
   		<script type="text" id="samples">
